Add functions to scripts.js to allow input to output different pages.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,15 @@
-.quizAnswers {
+#html {
+  display: none;
+}
+
+#rust {
+  display: none;
+}
+
+#python {
+  display: none;
+}
+
+#ruby {
   display: none;
 }
