--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 body {
   position: relative;
   height: 100vh;
-  background: linear-gradient(#5272c4, #65e6f3);
+  background-image: url(../img/background.png), linear-gradient(#5272c4, #65e6f3);
   font-family: impact;
 }
 
@@ -10,14 +10,22 @@ body {
   color: rgb(207, 248, 248);
   text-shadow: -3px 3px 5px black;
   border:5px solid#928bd3;
-  box-shadow: ;
+  box-shadow: 2.5px 0px rgb(79, 116, 128), -15px 4px 10px #5272c4;
 }
 
 h3 {
   font-family: tahoma;
   font-weight: 600px;
-
+  text-shadow: -2px 2px 1px gray;
 }
+
+#quiz{
+  background-color: rgb(239, 221, 255);
+  border: 5px solid#928bd3;
+  padding: 10px;
+  box-shadow: 2.5px 0px rgb(79, 116, 128), -15px 4px 10px #5272c4;
+}
+
 #html {
   display: none;
 }
