--- a/css/styles.css
+++ b/css/styles.css
@@ -15,16 +15,15 @@ body {
 
 .night {
   position: relative;
-  overflow: hidden;
-  width: 100%;
-  height: 100%;
+  width: 200%;
+  height: 200%;
   -webkit-transform: rotateZ(150deg);
   transform: rotateZ(150deg);
 }
 
 .star {
   position: absolute;
-  left: 80%;
+  left: 105%;
   top: 50%;
   height: 2px;
   background: linear-gradient(-45deg, #ffffff, rgba(0, 0, 255, 0));
@@ -42,8 +41,8 @@ body {
   right: 0;
   height: 2px;
   background: linear-gradient(-45deg, rgba(0, 0, 255, 0), #eaeef8, rgba (0, 0, 255, 0));
-  -webkit-transform: translateX(50%) rotateZ(45deg);
-  transform: translate(50%) rotateZ(45deg);
+  -webkit-transform: translateX(20%) rotateZ(45deg);
+  transform: translate(20%) rotateZ(45deg);
   border-radius: 100%;
   animation: shining 3000ms ease-in-out infinite;
 }
@@ -68,17 +67,31 @@ body {
 }
 
 .star:nth-child(2) {
-  top: calc(40% - -16px);
-  left: calc(10% - -500px);
- -webkit-animation-delay: 4500ms;
- animation-delay: 4500ms;
+  top: calc(40% - 506px);
+  left: calc(10% - -570px);
+ -webkit-animation-delay: 10000ms;
+ animation-delay: 10000ms;
 }
 
 .star:nth-child(2)::before,
 .star:nth-child(2)::after,
 .star:nth-child(2)::after {
-  -webkit-animation-delay: 4500ms;
-  animation-delay: 4500ms;
+  -webkit-animation-delay: 10000ms;
+  animation-delay: 10000ms;
+}
+
+.star:nth-child(3) {
+  top: calc(40% - -600px);
+  left: calc(70% - -500px);
+ -webkit-animation-delay: 9000ms;
+ animation-delay: 9000ms;
+}
+
+.star:nth-child(3)::before,
+.star:nth-child(3)::after,
+.star:nth-child(3)::after {
+  -webkit-animation-delay: 9000ms;
+  animation-delay: 9000ms;
 }
 
 @-webkit-keyframes tail {
