--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,9 @@
 body {
   position: relative;
   height: 100vh;
-  background-image: url(../img/background.png), linear-gradient(#5272c4, #65e6f3);
+  background-image: url(../img/background.png) , linear-gradient(#0e1562, #65e6f3);
+  background-repeat: no-repeat;
+  background-size: cover;
   font-family: impact;
 }
 
