--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 body {
   position: relative;
+  overflow: hidden;
   height: 100vh;
   background-image: url(../img/background.png) , linear-gradient(#0e1562, #65e6f3);
   background-repeat: no-repeat;
@@ -8,11 +9,17 @@ body {
 }
 
 .jumbotron {
-  background-color: #364461;
+  width: 37vw;
+  min-width: 400px;
+  background-color: rgba(73, 64, 97, 0);
   color: rgb(207, 248, 248);
   text-shadow: -3px 3px 5px black;
-  border:5px solid#928bd3;
-  box-shadow: 2.5px 0px rgb(79, 116, 128), -15px 4px 10px #5272c4;
+  margin-left: 10vw;
+  box-shadow: -15px 4px 20px 10px #5272c4;
+}
+
+.jumbotron h1 {
+  text-align: center;
 }
 
 .night {
@@ -195,83 +202,148 @@ h3,h2 {
   text-shadow: -2px 2px 1px gray;
 }
 
-#quiz {
-  box-shadow: -15px 4px 10px #5272c4;
+col-12 {
+  display: flex;
+  justify-content: center;
 }
 
 #qOne {
-  background-color: rgb(239, 221, 255);
-  border: 5px solid #554175;
+  display: flex;
+  box-sizing: border-box;
+  width: 30vw;
+  min-width: 350px;
+  background-color: rgba(221, 224, 255, 0.61);
+  border: 5px inset rgba(85, 65, 117, 0.7);
   padding: 10px;
-  margin-bottom: 5px;
-  box-shadow: 2.5px 0px rgb(79, 116, 128), -15px 4px 10px #5272c4;
+  padding-left: 40px;
+  margin-top: -20px;
+  margin-bottom: 10px;
+  margin-left: 15vw;
+  box-shadow:  -30px 10px 20px 10px rgba(82, 114, 196, 0.562);
+}
+
+#qOne h3 {
+  padding-left: 30px;
+}
+
+#qOne input {
+  width: 200px;
+  padding-left: 20px;
 }
 
 #qTwo {
+  box-sizing: border-box;
+  width: 30vw;
+  min-width: 350px;
   background-color: rgb(239, 221, 255);
-  border: 5px solid #554175;
+  border: 5px inset rgba(85, 65, 117, 0.7);
   padding: 10px;
-  margin-bottom: 5px;
-  box-shadow: 2.5px 0px rgb(79, 116, 128), -15px 4px 10px #5272c4;
+  padding-left: 30px;
+  margin-bottom: 10px;
+  margin-left: 12.5vw;
+  box-shadow:  -30px 10px 20px 10px rgba(82, 114, 196, 0.562);
+}
+
+#qTwo h3 {
+  padding-left: 30px;
+}
+
+#qTwo select {
+  width: 200px;
+  padding-left: 20px;
 }
 
 #qThree {
+  box-sizing: border-box;
+  width: 30vw;
+  min-width: 350px;
   background-color: rgb(239, 221, 255);
-  border: 5px solid #554175;
+  border: 5px inset rgba(85, 65, 117, 0.7);
   padding: 10px;
-  margin-bottom: 5px;
-  box-shadow: 2.5px 0px rgb(79, 116, 128), -15px 4px 10px #5272c4;
+  margin-bottom: 10px;
+  margin-left: 10vw;
+  box-shadow:  -30px 10px 20px 10px rgba(82, 114, 196, 0.562);
+}
+
+#qThree h3 {
+  padding-left: 30px;
 }
 
 #qFour {
+  box-sizing: border-box;
+  width: 30vw;
+  min-width: 350px;
   background-color: rgb(239, 221, 255);
-  border: 5px solid #554175;
+  border: 5px inset rgba(85, 65, 117, 0.7);
   padding: 10px;
-  margin-bottom: 5px;
-  box-shadow: 2.5px 0px rgb(79, 116, 128), -15px 4px 10px #5272c4;
+  padding-left: 30px;
+  margin-bottom: 10px;
+  margin-left: 12.5vw;
+  box-shadow:  -30px 10px 20px 10px rgba(82, 114, 196, 0.562);
+}
+
+#qFour h3 {
+  left: 50px;
+}
+
+#qFour select {
+  width: 200px;
+  left: 100px;
 }
 
 #qFive {
+  box-sizing: border-box;
+  width: 30vw;
+  min-width: 350px;
   background-color: rgb(239, 221, 255);
-  border: 5px solid #554175;
+  border: 5px inset rgba(85, 65, 117, 0.7);
   padding: 10px;
-  margin-bottom: 5px;
-  box-shadow: 2.5px 0px rgb(79, 116, 128), -15px 4px 10px #5272c4;
+  margin-bottom: 10px;
+  margin-left: 15vw;
+  box-shadow:  -30px 10px 20px 10px rgba(82, 114, 196, 0.562);
+}
+
+#qFive select {
+  width: 200px;
+}
+
+.btn-lg {
+  margin-left: 17.5vw;
 }
 
 #html {
   display: none;
   background-color: rgb(239, 221, 255);
-  border: 5px solid #554175;
+  border: 5px inset rgba(85, 65, 117, 0.7);
   padding: 10px;
   margin-bottom: 5px;
-  box-shadow: 2.5px 0px rgb(79, 116, 128), -15px -4px 10px #5272c4;
+  box-shadow:  -30px 10px 20px 10px rgba(82, 114, 196, 0.562);
 }
 
 #rust {
   display: none;
   background-color: rgb(239, 221, 255);
-  border: 5px solid #554175;
+  border: 5px inset rgba(85, 65, 117, 0.7);
   padding: 10px;
   margin-bottom: 5px;
-  box-shadow: 2.5px 0px rgb(79, 116, 128), -15px 4px 10px #5272c4;
+  box-shadow:  -30px 10px 20px 10px rgba(82, 114, 196, 0.562);
 }
 
 #python {
   display: none;
   background-color: rgb(239, 221, 255);
-  border: 5px solid #554175;
+  border: 5px inset rgba(85, 65, 117, 0.7);
   padding: 10px;
   margin-bottom: 5px;
-  box-shadow: 2.5px 0px rgb(79, 116, 128), -15px 4px 10px #5272c4;
+  box-shadow:  -30px 10px 20px 10px rgba(82, 114, 196, 0.562);
 }
 
 #ruby {
   display: none;
   background-color: rgb(239, 221, 255);
-  border: 5px solid #554175;
+  border: 5px inset rgba(85, 65, 117, 0.7);
   padding: 10px;
   margin-bottom: 5px;
-  box-shadow: 2.5px 0px rgb(79, 116, 128), -15px 4px 10px #5272c4;
+  box-shadow:  -30px 10px 20px 10px rgba(82, 114, 196, 0.562);
 }
 
