--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,16 @@
 body {
   position: relative;
-  overflow: hidden;
-  height: 100vh;
+  overflow-x: hidden;
+  max-width: 100vw;
+  max-height: 100vh;
   background-image: url(../img/background.png) , linear-gradient(#0e1562, #65e6f3);
   background-repeat: no-repeat;
   background-size: cover;
   font-family: impact;
+}
+
+.container {
+  overflow: hidden;
 }
 
 .jumbotron {
@@ -15,7 +20,6 @@ body {
   color: rgb(207, 248, 248);
   text-shadow: -3px 3px 5px black;
   margin-left: 10vw;
-  box-shadow: -15px 4px 20px 10px #5272c4;
 }
 
 .jumbotron h1 {
@@ -32,6 +36,7 @@ body {
 
 .star {
   position: absolute;
+  overflow: hidden;
   left: 105%;
   top: 50%;
   height: 2px;
@@ -210,16 +215,19 @@ col-12 {
 #qOne {
   display: flex;
   box-sizing: border-box;
-  width: 30vw;
-  min-width: 350px;
-  background-color: rgba(221, 224, 255, 0.61);
+  content: flex;
+  width: 25vw;
+  min-width: 350px; 
+  min-height: 11vh;
+  background-color: rgba(221, 235, 255, 0.61);
   border: 5px inset rgba(85, 65, 117, 0.7);
+  border-radius: 100px;
   padding: 10px;
   padding-left: 40px;
-  margin-top: -20px;
+  margin-top: -80px;
   margin-bottom: 10px;
-  margin-left: 15vw;
-  box-shadow:  -30px 10px 20px 10px rgba(82, 114, 196, 0.562);
+  margin-left: 17vw;
+  box-shadow:  -30px 10px 20px 10px rgba(82, 114, 196, 0.562),  -10px 2px 10px 5px inset rgba(78, 95, 114, 0.452);
 }
 
 #qOne h3 {
@@ -233,15 +241,18 @@ col-12 {
 
 #qTwo {
   box-sizing: border-box;
-  width: 30vw;
+  width: 25vw;
   min-width: 350px;
-  background-color: rgb(239, 221, 255);
+  min-height: 11vh;
+  background-color: rgba(221, 235, 255, 0.61);
   border: 5px inset rgba(85, 65, 117, 0.7);
+  border-radius: 100px;
   padding: 10px;
   padding-left: 30px;
   margin-bottom: 10px;
-  margin-left: 12.5vw;
-  box-shadow:  -30px 10px 20px 10px rgba(82, 114, 196, 0.562);
+  margin-left: 13.5vw;
+  box-shadow:  -30px 10px 20px 10px rgba(82, 114, 196, 0.562), -10px 2px 10px 5px inset rgba(78, 95, 114, 0.452);
+  
 }
 
 #qTwo h3 {
@@ -255,14 +266,16 @@ col-12 {
 
 #qThree {
   box-sizing: border-box;
-  width: 30vw;
+  width: 25vw;
   min-width: 350px;
-  background-color: rgb(239, 221, 255);
-  border: 5px inset rgba(85, 65, 117, 0.7);
+  min-height: 20vh;
+  background-color: rgba(221, 222, 255, 0.61);
+  border: 5px inset rgba(65, 70, 117, 0.7);
+  border-radius: 50px;
   padding: 10px;
   margin-bottom: 10px;
   margin-left: 10vw;
-  box-shadow:  -30px 10px 20px 10px rgba(82, 114, 196, 0.562);
+  box-shadow:  -20px 20px 20px 10px rgba(117, 136, 189, 0.384), -10px 2px 10px 5px inset rgba(78, 106, 114, 0.452);
 }
 
 #qThree h3 {
@@ -271,15 +284,17 @@ col-12 {
 
 #qFour {
   box-sizing: border-box;
-  width: 30vw;
+  width: 25vw;
   min-width: 350px;
-  background-color: rgb(239, 221, 255);
+  min-height: 11vh;
+  background-color: rgba(221, 255, 252, 0.514);
   border: 5px inset rgba(85, 65, 117, 0.7);
+  border-radius: 100px;
   padding: 10px;
   padding-left: 30px;
   margin-bottom: 10px;
-  margin-left: 12.5vw;
-  box-shadow:  -30px 10px 20px 10px rgba(82, 114, 196, 0.562);
+  margin-left: 13.5vw;
+  box-shadow:  -15px 25px 20px 10px rgba(82, 114, 196, 0.562), -10px 2px 10px 5px inset rgba(78, 106, 114, 0.452);
 }
 
 #qFour h3 {
@@ -287,28 +302,38 @@ col-12 {
 }
 
 #qFour select {
+  position: absolute;
   width: 200px;
-  left: 100px;
+  left: 45px;
 }
 
 #qFive {
   box-sizing: border-box;
-  width: 30vw;
+  width: 25vw;
   min-width: 350px;
-  background-color: rgb(239, 221, 255);
+  min-height: 11vh;
+  background-color: rgba(197, 220, 226, 0.425);
   border: 5px inset rgba(85, 65, 117, 0.7);
+  border-radius: 100px;
   padding: 10px;
+  padding-left: 30px;
   margin-bottom: 10px;
-  margin-left: 15vw;
-  box-shadow:  -30px 10px 20px 10px rgba(82, 114, 196, 0.562);
+  margin-left: 17vw;
+  box-shadow:  -10px 30px 20px 10px rgba(82, 114, 196, 0.562), -10px 2px 10px 5px inset rgba(78, 106, 114, 0.651);
 }
 
 #qFive select {
+  position: absolute;
   width: 200px;
+  left: 45px;
 }
 
 .btn-lg {
+  background-color: rgba(197, 220, 226, 0.425);
+  border: 5px inset rgba(85, 65, 117, 0.7);
+  border-radius: 100px;
   margin-left: 17.5vw;
+  box-shadow: -10px 2px 10px 5px inset rgba(78, 106, 114, 0.651);
 }
 
 #html {
